--- a/tracker/src/main/AndroidManifest.xml
+++ b/tracker/src/main/AndroidManifest.xml
@@ -1,5 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.richard.tracker">
-
-    /
+    package="com.zsmarter.exposuretracker">
 </manifest>
