--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation project(':tracker')
 
+//    implementation 'com.github.houjun5002:Tracker:1.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     implementation 'com.bigkoo:convenientbanner:2.1.5'
     implementation 'com.facebook.fresco:fresco:2.5.0'
